fixed download link on rental-application page, it was too long and ran off the page

--- a/site/themes/redwood/css/redwood.css
+++ b/site/themes/redwood/css/redwood.css
@@ -719,7 +719,7 @@ code {
 .white-sub-heading {
   font-family: "FreightSansPro", sans-serif;
   font-size: 28px;
-  font-weight: 300;
+  font-weight: 400;
   text-transform: uppercase;
   text-align: center;
   color: #ffffff;
