--- a/site/themes/redwood/sass/elements/typography.scss
+++ b/site/themes/redwood/sass/elements/typography.scss
@@ -280,7 +280,7 @@ code {
 .white-sub-heading {
 	font-family: $font_sans;
 	font-size: 28px;
-	font-weight: 300;
+	font-weight: 400;
 	text-transform: uppercase;
 	text-align: center;
 	color: $color_white;
